# strake

./: .cursorrules  .dockerignore  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.release  README.md  deny.toml  install.sh  mkdocs.yml  prek.toml  pytest.ini  test_config.rs
config/: contracts.yaml  policies.yaml  strake.yaml
crates/bench/: Cargo.toml
crates/bench/benches/: flatten_benchmark.rs
crates/bench/src/: main.rs
crates/cli/: Cargo.toml  sources.yaml  sources_violating.yaml
crates/cli/migrations/: 001_initial_schema.sql  002_group_rbac.sql
crates/cli/migrations/sqlite/: 001_initial_schema.sql
crates/cli/src/: commands.rs  config.rs  exit_codes.rs  impact.rs  main.rs  models.rs  output.rs  secrets.rs
crates/cli/src/commands/: ai.rs  apply.rs  apply_models.rs  describe.rs  diff.rs  diff_logic.rs  discovery.rs  domain.rs  helpers.rs  init.rs  mod.rs  remove.rs  secrets.rs  status.rs  validate.rs
crates/cli/src/commands/ai/: adapter.rs  gemini.rs  mod.rs  openai.rs  prompt.rs  registry.rs
crates/cli/src/commands/tests/: mod.rs  test_diff.rs  test_discovery.rs  test_helpers.rs  test_init.rs  test_validate.rs
crates/cli/src/metadata/: mod.rs  models.rs  postgres.rs  sqlite.rs
crates/cli/templates/: README.md  default.yaml  grpc.yaml  rest.yaml  strake.yaml
crates/cli/tests/: log_locations.rs
crates/common/: Cargo.toml
crates/common/src/: auth.rs  circuit_breaker.rs  config.rs  error.rs  lib.rs  models.rs  retry.rs  schema.rs  scrubber.rs  telemetry.rs  warnings.rs
crates/common/src/config/: defaults.rs  error.rs  integrations.rs  limits.rs  mod.rs  server.rs
crates/common/src/predicate_cache/: key.rs  metrics.rs  mod.rs  store.rs
crates/common/tests/: predicate_key.rs
crates/connectors/: Cargo.toml
crates/connectors/src/: introspect.rs  lib.rs
crates/connectors/src/sources/: file.rs  flight.rs  grpc.rs  iceberg.rs  mod.rs  predicate_caching.rs  rest.rs  rest_auth.rs  schema_drift.rs
crates/connectors/src/sources/iceberg/: auth.rs  catalog.rs  error.rs  federation.rs  provider.rs  telemetry.rs
crates/connectors/src/sources/sql/: clickhouse.rs  common.rs  duckdb.rs  duckdb_federation.rs  duckdb_introspect.rs  mod.rs  mysql.rs  postgres.rs  postgres_federation.rs  postgres_introspect.rs  sqlite.rs  sqlite_federation.rs  wrappers.rs
crates/connectors/tests/: common.rs  iceberg_concurrent.rs  iceberg_lazy.rs  iceberg_oauth.rs  iceberg_partitioning.rs  iceberg_rest.rs  iceberg_time_travel.rs  rest_source.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  dialect_router.rs  error.rs  federation.rs  lib.rs  models.rs  sidecar.rs  sql_gen.rs  substrait_producer.rs
crates/core/src/dialects/: function_mapper.rs  mod.rs
crates/core/src/query/: circuit_breaker.rs  mod.rs  trace.rs
crates/core/src/sources/: file.rs  flight.rs  grpc.rs  mod.rs  rest.rs  rest_auth.rs
crates/core/src/sources/sql/: clickhouse.rs  common.rs  duckdb.rs  mod.rs  postgres.rs
crates/core/tests/: function_mapper.rs  oracle_dialect.rs  postgres_integration.rs  rest_source.rs  snowflake_dialect.rs  sqlite_integration.rs
crates/error/: Cargo.toml
crates/error/src/: code.rs  context.rs  convert.rs  lib.rs
crates/error/tests/: serialization.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: federation.rs  lib.rs  main.rs  sidecar.rs
crates/runtime/src/optimizer/: flatten_federated.rs  mod.rs
crates/runtime/src/query/: cache.rs  cost_validator.rs  mod.rs  plan_tree.rs  planner.rs  trace.rs
crates/runtime/tests/: arrow_proptest.rs  schema_drift_integration.rs  sqlite_integration.rs  telemetry.rs  test_cache.rs
crates/server/: Cargo.toml
crates/server/src/: api.rs  auth.rs  concurrency.rs  flight_sql.rs  lib.rs  license.rs  metrics_tests.rs
crates/sql/: Cargo.toml
crates/sql/src/: dialect_router.rs  lib.rs  relation_scope.rs  repro_test.rs  schema_adapter.rs  scope_analyzer.rs  sql_gen.rs  substrait_producer.rs
crates/sql/src/dialects/: function_mapper.rs  oracle.rs  snowflake.rs
crates/sql/src/optimizer/: defensive_trace.rs  flatten_federated.rs  join_flattener.rs  mod.rs  remapper.rs
crates/sql/src/sql_generator/: context.rs  dialect.rs  error.rs  expr.rs  mod.rs  sanitize.rs
crates/sql/src/sql_generator/translator/: aggregate.rs  join.rs  mod.rs  projection.rs  scan.rs  set_ops.rs  sort.rs
crates/sql/tests/: edge_cases.rs  feature_gated.rs  flatten_joins_collisions.rs  flatten_joins_correctness.rs  flatten_joins_limit.rs  flatten_joins_proptest.proptest-regressions  flatten_joins_proptest.rs  function_mapper.rs  integration.rs  it.rs  oracle_dialect.rs  remapper_unit.rs  snowflake_dialect.rs
crates/sql/tests/common/: mod.rs
crates/sql/tests/dialects/: mod.rs  oracle.rs  snowflake.rs
crates/sql/tests/fixtures/: macros.rs  mod.rs
crates/sql/tests/integration/: end_to_end.rs  mod.rs  robustness.rs  scopes.rs
crates/sql/tests/unit/: function_mapper.rs  mod.rs
docs/: CI_SETUP.md  ai_context.md  api.md  architecture.md  cli-reference.md  concepts.md  connectors.md  enterprise.md  examples.md  index.md  install.md  integration_tests.md  mcp_manual.md  python-api.md  quickstart.md
keys/: public.pem
python/: Cargo.toml  pyproject.toml  strake.pyi  test_ast_hardening.py  test_error_hierarchy.py  test_fastmcp_error.py  test_log_discovery.py  test_mcp.py  test_mcp_import.py  test_sandbox_policy.py
python/src/: connection.rs  errors.rs  lib.rs
python/src/backend/: embedded.rs  mod.rs  remote.rs
python/strake/: __init__.py  __init__.pyi  agent_init.py  errors.py  errors.pyi  mcp.py  metadata.py  policy.py  search.py  utils.py
python/strake/sandbox/: __init__.py  base.py  core.py  firecracker.py  macos_worker.py  native.py
python/strake/tracing/: __init__.py  session.py
strake-bench/: Cargo.toml
strake-cli/: Cargo.toml
strake-cli/migrations/: 001_initial_schema.sql
strake-cli/src/: commands.rs  db.rs  main.rs
strake-cli/templates/: file.yaml  sql.yaml
strake-core/: Cargo.toml
strake-python/: Cargo.toml
strake-server/: Cargo.toml
(+52 files in other folders)
