[workspace]
members = ["crates/*", "python", "strake-enterprise"]
resolver = "2"

[workspace.dependencies]
# Pin exact versions to avoid dependency hell
arrow = "57"
datafusion = "51"
datafusion-python = "50"
datafusion-federation = "0.4"
datafusion-table-providers = { version = "0.9", features = ["postgres", "mysql", "sqlite", "flight"] }
arrow-flight = { version = "57", features = ["flight-sql-experimental"] }
axum = "0.8.8"

tokio = { version = "1.40", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
pyo3 = "0.26"
pyo3-asyncio = "0.20"
prost = "0.14.1"
prost-types = "0.14.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
secrecy = "0.10"
anyhow = "1.0"
thiserror = "1.0"
tonic = "0.14"
futures = "0.3"
async-trait = "0.1"
tower = "0.5"

# Cache serialization
sha2 = "0.10"

# Telemetry & Observability
opentelemetry = "0.27"
opentelemetry-otlp = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
tracing-opentelemetry = "0.28"
prometheus = "0.13"
once_cell = "1.20"
