[workspace]
members = ["crates/*", "python", "strake-enterprise"]
resolver = "2"
[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
license-file = "LICENSE"

[workspace.dependencies]
# Pin exact versions to avoid dependency hell
openssl = { version = "0.10", features = ["vendored"] }
arrow = "57"
datafusion = "51"
datafusion-python = "50"
datafusion-federation = { version = "0.4", features = ["sql"] }
datafusion-table-providers = { version = "0.9", features = ["postgres", "mysql", "sqlite", "flight", "clickhouse"] }
arrow-flight = { version = "57", features = ["flight-sql-experimental"] }
arrow-json = "57"
axum = "0.8.8"
reqwest = { version = "0.11", features = ["json"] }
rmcp = { version = "0.12", features = ["server", "transport-io"] }
rmcp-macros = "0.12"
# MCP dependencies
mcp-core = { version = "0.1" }
clap = { version = "4.5", features = ["derive", "env"] }

tokio = { version = "1.40", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
pyo3 = "0.26"
pyo3-asyncio = "0.20"
prost = "0.14.1"
prost-types = "0.14.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
secrecy = "0.10"
anyhow = "1.0"
thiserror = "1.0"
tonic = "0.14"
futures = "0.3"
async-trait = "0.1"
tower = "0.5"
url = "2.5"

# Cache serialization
sha2 = "0.10"

# Telemetry & Observability
opentelemetry = "0.27"
opentelemetry-otlp = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
tracing-opentelemetry = "0.28"
prometheus = "0.13"
once_cell = "1.20"
nix = "0.29.0"
serial_test = "3.2"

[profile.dev]
# Disabling debug info for dependencies speeds up linking significantly
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 3
debug = false

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
