[package]
name = "strake-python"
version.workspace = true
license.workspace = true
edition = "2021"

[lib]
name = "_strake"
crate-type = ["cdylib"]

[dependencies]
strake-runtime = { path = "../crates/runtime" }
strake-common = { path = "../crates/common" }
pyo3 = { workspace = true, features = ["extension-module", "abi3-py310"] }
arrow = { workspace = true, features = ["pyarrow", "prettyprint"] }
arrow-flight = { workspace = true, features = ["flight-sql-experimental"] }
tokio = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
async-trait.workspace = true
