[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "strake"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
version = "0.1.2"
dependencies = [
    "mcp>=0.1.0",
    "pyarrow>=14.0.0",
    "uvicorn>=0.20.0",
    "lancedb>=0.6.0",
    "tantivy>=0.21.0"
]

[tool.maturin]
python-source = "."
module-name = "strake._strake"
