[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "strake"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
version = "0.2.1"
description = "The AI Data Layer: Secure, sandboxed environment for AI agents to query and process data."
readme = "../README.md"
authors = [
    { name = "Strake Data", email = "hello@strakedata.com" },
]
keywords = ["ai", "data", "sandbox", "mcp", "datafusion", "arrow", "agent"]
dependencies = [
    "mcp>=0.1.0",
    "pyarrow>=14.0.0",
    "uvicorn>=0.20.0",
    "lancedb>=0.6.0",
    "tantivy>=0.21.0"
]

[project.urls]
Homepage = "https://strakedata.com"
Documentation = "https://strake-data.github.io/strake/"
Repository = "https://github.com/strake-data/strake"
Issues = "https://github.com/strake-data/strake/issues"

[tool.maturin]
python-source = "."
module-name = "strake._strake"
