[package]
name = "strake-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dotenv = "0.15"
regex = "1.12.2"
serde_json = "1.0.148"
md5 = "0.7"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
strake-core = { path = "../strake-core" }
owo-colors = "4.1.0"
indicatif = "0.17.11"
