[package]
name = "strake-bench"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
strake-runtime = { path = "../runtime" }
strake-common = { path = "../common" }
strake-sql = { path = "../sql" }
datafusion = { workspace = true }
arrow = { workspace = true }
tokio = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
rand = "0.9.2"
chrono = "0.4"
async-trait = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
criterion = "0.5"
tokio = { workspace = true, features = ["rt", "macros"] }

[[bench]]
name = "flatten_benchmark"
harness = false
