[package]
name = "strake-cli"
version.workspace = true
license.workspace = true
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { workspace = true, features = ["full", "test-util"] } # Moved feature request up
openssl = { workspace = true }
tokio-postgres = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dotenv = "0.15"
regex = "1.12.2"
serde_json = "1.0.148"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
strake-runtime = { path = "../runtime" }
strake-common = { path = "../common" }
strake-error = { path = "../error" }
owo-colors = "4.1.0"
indicatif = "0.17.11"
dirs = "5.0"
tracing = { workspace = true }
rusqlite = { version = "0.37", features = ["bundled", "chrono"] }
secrecy = { workspace = true }
futures = "0.3"

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true, features = ["full", "test-util"] }
serde_json = "1.0"
serial_test = { workspace = true }
tempfile = "3.17.1"
