[package]
name = "strake-common"
version.workspace = true
license.workspace = true
edition = "2021"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
secrecy = { workspace = true }
opentelemetry = { version = "0.27", optional = true }
datafusion = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
arrow = { workspace = true }

[features]
default = []
telemetry = ["opentelemetry"]
