[package]
name = "strake-common"
version.workspace = true
license.workspace = true
edition = "2021"

[dependencies]
strake-error = { path = "../error" }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
secrecy = { workspace = true }
tracing-subscriber = { workspace = true, features = ["registry"] }
opentelemetry = { workspace = true, optional = true }
opentelemetry-otlp = { version = "0.27", optional = true, features = ["grpc-tonic", "trace"] }
opentelemetry_sdk = { workspace = true, optional = true, features = ["rt-tokio"] }
tracing-opentelemetry = { workspace = true, optional = true }
datafusion = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
arrow = { workspace = true }

[features]
default = []
telemetry = ["opentelemetry", "opentelemetry-otlp", "opentelemetry_sdk", "tracing-opentelemetry"]

[dev-dependencies]
serial_test = { workspace = true }

