[package]
name = "strake-common"
version.workspace = true
license.workspace = true
edition = "2021"

[dependencies]
strake-error = { path = "../error" }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
secrecy = { workspace = true, features = ["serde"] }
config = "0.14"
validator = { version = "0.19", features = ["derive"] }
tracing-subscriber = { workspace = true, features = ["registry"] }
opentelemetry = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true, features = ["grpc-tonic", "trace", "metrics"] }
opentelemetry_sdk = { workspace = true, optional = true, features = ["rt-tokio"] }
tracing-opentelemetry = { workspace = true, optional = true }
datafusion = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
arrow = { workspace = true }
regex = "1.10"
once_cell = { workspace = true }

[features]
default = []
telemetry = ["opentelemetry", "opentelemetry-otlp", "opentelemetry_sdk", "tracing-opentelemetry"]

[dev-dependencies]
serial_test = { workspace = true }

