[package]
name = "strake-core"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[features]
default = ["duckdb-connector", "sqlite-connector", "mysql-connector"]
# Heavy connectors - can be disabled for faster compile times
duckdb-connector = ["dep:duckdb"]
sqlite-connector = ["dep:rusqlite"]
mysql-connector = ["dep:mysql_async"]
# Full connector suite
all-connectors = ["duckdb-connector", "sqlite-connector", "mysql-connector"]

[dependencies]
arrow = { workspace = true }
datafusion = { workspace = true }
datafusion-substrait = "51.0.0"
arrow-flight = { workspace = true }
datafusion-federation = { workspace = true }
datafusion-table-providers = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
openssl = { workspace = true }
tokio-postgres = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
secrecy = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
tower = { workspace = true, features = ["util"] }
sqlparser = "0.60.0"
rand = "0.9.2"
parking_lot = "0.12.5"
serde_json = "1.0"
mysql_async = { version = "0.36", optional = true }
rusqlite = { version = "0.37", features = ["bundled"], optional = true }
duckdb = { version = "1.1", features = ["bundled"], optional = true }
reqwest = { version = "0.11", features = ["json", "blocking"] }
url = "2.5"
encoding_rs = "0.8"
prost-reflect = { version = "0.16", features = ["serde"] }
prost-types = { workspace = true }
prost = { workspace = true }
object_store = { version = "0.12.4", features = ["aws"] }
opendal = { version = "0.55.0", features = ["services-s3", "services-azblob", "services-gcs", "services-http", "services-ftp"] }
object_store_opendal = "0.55.0"
nix = { workspace = true, features = ["signal", "process"] }
base64 = "0.22"
jsonwebtoken = "9"

# Query result caching
sha2 = { workspace = true }
parquet = "57.1.0"  # For cache serialization
moka = { version = "0.12", features = ["future"] }  # Concurrent LRU cache

[target.'cfg(unix)'.dependencies]
opendal = { version = "0.55.0", features = ["services-sftp"] }


[dev-dependencies]
tokio-test = "0.4"
proptest = "1.0"
wiremock = "0.6.5"
parquet = "57.1.0"
tempfile = "3.24.0"

