[package]
name = "strake-sql"
version.workspace = true
license.workspace = true
edition = "2021"

[dependencies]
strake-common = { path = "../common" }
datafusion = { workspace = true }
datafusion-substrait = "51.0.0"
datafusion-federation = { workspace = true }
sqlparser = "0.60.0"
tracing = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
arrow = { workspace = true }
tokio = { workspace = true }
