[package]
name = "strake-sql"
version.workspace = true
license.workspace = true
edition = "2021"

[features]
default = []
# Emergency rollback feature: enables aggressive join aliasing (disabled by default due to DataFusion Unparser issue #13272)
aggressive-join-aliasing = []


[dependencies]
strake-common = { path = "../common" }
strake-error = { path = "../error" }
serde_json = { workspace = true }
datafusion = { workspace = true }
datafusion-substrait = "51.0.0"
datafusion-federation = { workspace = true }
sqlparser = { version = "0.59", features = ["visitor"] }
thiserror = "1.0"
tracing = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
arrow = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
proptest = "1.5"
